# cot-data-validation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  model_train.py  pyproject.toml
src/: model_merge_adapter.py  model_test.ipynb  serve.sh
