[project]
name = "cot-data-validation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easydict>=1.13",
    "ipykernel>=7.1.0",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "unsloth>=2025.11.1",
    "vllm>=0.11.0",
]
